@@ -114,3 +114,6 @@ In the struct canmsg_tag I have changed the CAN_data[16] in CAN_data[8]. I do no
 
 2010-27-Jul  Marco Randazzo <marco.randazzo@iit.it>
 * Current build 34. control_mode[] is now broadcasted every time a change in modality is detected. see void can_send_broadcast(void)
+
+2010-17-Ago Marco Randazzo <marco.randazzo@iit.it>
+* Current build 35. Added torque/impedance control for firmware version 0x0119 (forearm pronosupination) 
